examples/errors/multipleCtrs.con
adt Example = C Integer | C Boolean .
